[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-run-id"
version = "0.1.0"
description = "Generate and propagate run IDs through agent loops — tag messages, annotate logs, context manager. Zero dependencies."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["agents", "llm", "tracing", "run-id", "observability"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/agent-run-id"

[tool.setuptools.packages.find]
where = ["src"]
