[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-run-id"
version = "0.1.0"
description = "Generate, format, and thread run IDs through LLM agent pipelines"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []
keywords = ["agent", "llm", "run-id", "tracing", "correlation", "id"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_run_id"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
